--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,9 @@
 body { 
         background-image:url(
         http://68.media.tumblr.com/3d132638a57707375a2daae4f0f14e86/tumblr_ml9zkiQwn31qiemkoo1_500.gif);
-        background-repeat: no-repeat; 
+        background-repeat: repeat-y; 
         background-size: cover;
+        background-position: center;
         color: white; 
         font-family: 'Zilla Slab', serif; 
         text-align: center; 
