--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body { 
         background-image:url(
         http://68.media.tumblr.com/3d132638a57707375a2daae4f0f14e86/tumblr_ml9zkiQwn31qiemkoo1_500.gif);
-        background-repeat: repeat-y; 
+        background-repeat: no-repeat; 
         background-size: cover;
         background-position: center;
         color: white; 
